# backshot-engine

./: Cargo.toml  README.md
glsl/: frag_shader.glsl  vert_shader.glsl
glsl/imgui/: frag.glsl  vert.glsl
maps/: bad_header.map  bad_section.map  map_format.md  test.map
render_crate/: Cargo.toml
render_crate/glsl/: vert_shader.glsl
render_crate/glsl/imgui/: frag.glsl  vert.glsl
render_crate/src/: lib.rs  render_vec.rs  vector3.rs
render_crate/src/gl_wrappers/: mod.rs  program.rs  shader.rs
render_crate/src/imgui_wrappers/: mod.rs  renderer.rs  sdlplatform.rs
src/: brush.rs  main.rs  program.rs  render.rs  render_vec.rs  vector3.rs  vertex.rs  world.rs
src/gl_wrappers/: mod.rs  program.rs  shader.rs
src/imgui_wrappers/: mod.rs  renderer.rs  sdlplatform.rs
src/map/: mod.rs  parser.rs
src/render/: mod.rs  render_vec.rs
src/ui/: debug_ui.rs  mod.rs  ui_manager.rs
src/world/: mod.rs
world_crate/: Cargo.toml
world_crate/src/: lib.rs
