[package]
name = "backshot_engine"
version = "0.1.0"
edition = "2024"

# Licensing information for dependencies can be found in README.md.
[dependencies]
render = { path = "./render_crate" }
world = { path = "./world_crate" }

sdl2 = { path = "./thirdparty/rust-sdl2" }
thiserror = "2.0.16"
anyhow = "1.0.100"
